--- a/lis/jQuery/index.html
+++ b/lis/jQuery/index.html
@@ -135,7 +135,7 @@
 <body>
     <div class="nav">
         <ul>
-        <li><img src="logo.jpg" alt=""></li>
+        <li><img src="images/logo.jpg" alt=""></li>
          <li><span>莜茉</span></li>
         <li><a href="">发现</a></li>
         <li><a href="">最新</a></li>
