--- a/lis/examples/autoPlay.html
+++ b/lis/examples/autoPlay.html
@@ -181,8 +181,8 @@
 <script type="text/javascript">
 	
 var runPage,
-    iterval,
-    auPlay;
+    interval,
+    autoPlay;
 
 autPlay = function(to) {
 
@@ -207,16 +207,16 @@ runPage = new FullPage({
     },                           
 	mode : 'touch,nav:navBar',               // mode of fullpage
 	easing : [0, .93, .39, .98],                                // easing('ease','ease-in','ease-in-out' or use cubic-bezier like [.33, 1.81, 1, 1] )
-    //callback : function(index, thisPage) {     // callback when pageChange
+    callback : function(index, thisPage) {     // callback when pageChange
 
-       // index = index + 1 > 3 ? 0 : index + 1;
-      //  autoPlay(index);
-   // }
+        index = index + 1 > 3 ? 0 : index + 1;
+        autoPlay(index);
+    }
 });
 
-//interval = setTimeout(function() {
-   // runPage.go(runPage.thisPage() + 1);
-//}, 3000);
+interval = setTimeout(function() {
+    runPage.go(runPage.thisPage() + 1);
+}, 3000);
 
 </script>
 
