--- a/lis/examples/autoPlay.html
+++ b/lis/examples/autoPlay.html
@@ -184,7 +184,7 @@ var runPage,
     interval,
     autoPlay;
 
-autPlay = function(to) {
+autoPlay = function(to) {
 
     clearTimeout(interval);
     interval = setTimeout(function() {
